<resources>
    <string name="app_name">Second Build</string>
    <string name="guest_login">Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="gm_solo">Solo</string>
    <string name="gm_multiplayer">Multiplayer</string>
    <string name="gp_lobby_match">Lobby Match</string>
    <string name="categories">Categories</string>
    <string name="category1">Category1</string>
    <string name="category2">Category2</string>
    <string name="category3">Category3</string>
    <string name="switch_text">Easy</string>
    <string name="answer_1">answ_1</string>
    <string name="answer_3">answ_3</string>
    <string name="answer_2">answ_2</string>
    <string name="answer_4">answ_4</string>
    <string name="curr_question">curr_question</string>
    <string name="exit">Main Menu</string>
    <string name="next">Next</string>
    <string name="Score">Score:</string>
</resources>
